--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "apollo-server-cloud-functions": "^2.16.0",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
