--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/setup-node@master
         with:
           node-version: "10.x"
+      - run: cd functions; npm install
       - run: npm install
       - run: npm run build
       - uses: w9jds/firebase-action@master
