--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "capacitor:build": "vue-cli-service capacitor:build",
+    "capacitor:serve": "vue-cli-service capacitor:serve"
   },
   "dependencies": {
     "@apollo/client": "^3.0.2",
     "@babel/polyfill": "^7.4.4",
+    "@capacitor/android": "^2.0.0",
+    "@capacitor/cli": "^2.0.0",
+    "@capacitor/core": "^2.0.0",
+    "@capacitor/ios": "^2.0.0",
     "@mdi/font": "^5.3.45",
     "animate.css": "^4.1.0",
     "animation.css": "^0.1.0",
@@ -23,6 +29,7 @@
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
+    "@nklayman/vue-cli-plugin-capacitor": "~0.4.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.4.0",
