chore: 🤖 iOS platform confguration changes

--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,1 +1,1 @@
-{"appId":"page.0x77.total","appName":"Total","bundledWebRuntime":false,"webDir":"dist"}
+{"appId":"page.0x77.total","appName":"Total","bundledWebRuntime":false,"webDir":"dist","server":{"url":"http://10.103.7.233:8080"}}
